--- a/traefik/Docker-compose.yml
+++ b/traefik/Docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - 80:80
       - 443:443
     environment:
-      - CF_API_EMAIL= email of cloudflare 
+      - CF_API_EMAIL= email of cloudflare
       - CF_DNS_API_TOKEN= API token from cloudflare with Zone.DNS permission
       # - CF_API_KEY=YOUR_API_KEY
       # be sure to use the correct one depending on if you are using a token or key
@@ -26,13 +26,13 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.entrypoints=http"
-      - "traefik.http.routers.traefik.rule=Host(`traefik-dashboard.yourdomain.in`)"
+      - "traefik.http.routers.traefik.rule=Host(`dashboard.yourdomain.in`)"
       - "traefik.http.middlewares.traefik-auth.basicauth.users=user:hash"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
       - "traefik.http.routers.traefik-secure.entrypoints=https"
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik-dashboard.yourdomain.in`)"
+      - "traefik.http.routers.traefik-secure.rule=Host(`dashboard.yourdomain.in`)"
       - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
       - "traefik.http.routers.traefik-secure.tls=true"
       - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
