--- a/traefik/data/traefik.yml
+++ b/traefik/data/traefik.yml
@@ -15,7 +15,7 @@ serversTransport:
   insecureSkipVerify: true
 providers:
   docker:
-    endpoint: "unix:///var/run/docker.sock"
+    endpoint: "unix:///run/podman/podman.sock"
     exposedByDefault: false
   file:
     filename: /config.yml
