--- a/vauletwarden/docker-compose.yml
+++ b/vauletwarden/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   bitwardenrs:
-    image: vaultwarden/server
+    image: docker.io/vaultwarden/server
     container_name: vaultwarden
     restart: unless-stopped
     volumes:
